[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"
[lib]

path = "src/lib.rs"
[[bin]]
path="src/main.rs"
name="newsletter"
[dependencies]
actix-web="4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio={ version = "1", features = [ "macros", "rt-multi-thread"] }


[dev-dependencies]
reqwest="0.11"